# study_cmake

./: README.md  _execute.cmake
core/: command_arguments.cmake  command_definitions.cmake  conditions.cmake  configure_file.cmake  convenience_commands.cmake  generator_expressions.cmake  lists.cmake  loop.cmake  math.cmake  module.cmake  policy.cmake  regex.cmake  touch_parent_scope.cmake  variable_priorities.cmake  variable_scope.cmake  variable_types.cmake
core/configure_file/: CMakeLists.txt  test.hpp.in
core/convenience_commands/: .gitignore  CMakeLists.txt.in  test1.txt
core/generator_expressions/: CMakeLists.txt  foo.cpp  hoge.cpp  hoge.hpp  src1.cpp  src2.cpp
core/module/: Documentation.cmake  module.cmake  set_policy.cmake
core/module/dir/: module.cmake
core/properties/: CMakeLists.txt  Rakefile  src1.cpp  src2.cpp
core/variable_scope/: CMakeLists.txt  Rakefile
core/variables/: CMakeLists.txt
core/variables/subdir/: CMakeLists.txt
dev/: ctest.cmake  custom_target.cmake  external_project.cmake  precompiled_headers.cmake
dev/ctest/: CMakeLists.txt  Rakefile  test.cpp
dev/custom_target/: CMakeLists.txt  src1.cpp
dev/external_project/: CMakeLists.txt  src.cpp
dev/interface_libraries/: CMakeLists.txt  src.cpp
dev/interface_libraries/mylib/: lib.cpp  lib.hpp
dev/precompiled_headers/: CMakeLists.txt  main.cpp
extra/: cmake_3-1-0.cmake  quick_sort.cmake
extra/cmake_3-1-0/: .gitignore  CMakeLists.txt.in  hoge.cpp
hack/: delete_commands.cmake  eval.cmake
